# MAEngine

./: .gitignore  CMakeLists.txt  README.md
Documentation/: MMA Spec.h  MSM Spec.h
GML/Extension/: MAE.xml  generate.bat
GML/Extension/default/: template.extension.gmx  template.xml
GML/Extension/gml/: Animation.gml  Body.gml  Math.gml  Matrix.gml  Quaternion.gml  Shape.gml  Vector.gml
GML/MAE.gmx/: MAE.project.gmx
GML/MAE.gmx/Configs/: Default.config.gmx
GML/MAE.gmx/extensions/: MAE.extension.gmx
GML/MAE.gmx/objects/: obj_Audio.object.gmx  obj_Light.object.gmx  obj_MD2Animation.object.gmx  obj_MPM.object.gmx  obj_Navigation.object.gmx  obj_Particle.object.gmx  obj_Physics.object.gmx  obj_Shader.object.gmx  obj_VecMatQuat.object.gmx  obj_debug.object.gmx
GML/MAE.gmx/rooms/: rm_Audio.room.gmx  rm_Light.room.gmx  rm_MD2Animation.room.gmx  rm_Physics.room.gmx  rm_Shader.room.gmx  rm_VecMatQuat.room.gmx  rm_debug.room.gmx
GML/MAE.gmx/scripts/: CreateCheckbox.gml  CreateSlider.gml  DrawCheckbox.gml  DrawSlider.gml  DrawWindow.gml  MAE_AnimationCreate.gml  MAE_AnimationGetFrameNext.gml  MAE_AnimationGetTween.gml  MAE_AnimationSet.gml  MAE_AnimationUpdate.gml  MAE_BufferCreate.gml  MAE_BufferDestroy.gml  MAE_BufferPeek.gml  MAE_BufferPeekValue.gml  MAE_BufferPokeValue.gml  MAE_BufferRead.gml  MAE_BufferReadValue.gml  MAE_BufferSeek.gml  MAE_BufferWrite.gml  MAE_ErrorSetFlags.gml  MAE_FmodChannelCreate.gml  MAE_FmodChannelDelete.gml  MAE_FmodChannelPause.gml  MAE_FmodChannelSetFrequency.gml  MAE_FmodChannelSetPitch.gml  MAE_FmodChannelSetPosition.gml  MAE_FmodChannelSetVolume.gml  MAE_FmodChannelStop.gml  MAE_FmodCreate.gml  MAE_FmodGetCPUUsage.gml  MAE_FmodGetSampleRate.gml  MAE_FmodGetSounds.gml  MAE_FmodInitialize.gml  MAE_FmodSetMaxChannels.gml  MAE_FmodSetSoftwareFormat.gml  MAE_FmodSoundFree.gml  MAE_FmodSoundGetType.gml  MAE_FmodSoundLoad.gml  MAE_FmodSoundPlay.gml  MAE_FmodSoundSetLoopMode.gml  (+177 more)
Libraries/: .gitignore  README.md
MAE/: MAE.props  MAE.sln
MAE - GML/DLLs/MA_Bullet/: .gitignore  MA_Bullet.sln
MAE - GML/DLLs/MA_DX9/: .gitignore  MA_DX9.sdf.REMOVED.git-id  MA_DX9.sln  MA_DX9.vs13.sln  MA_DX9.vs15.VC.db.REMOVED.git-id  MA_DX9.vs15.sln
MAE - GML/MAE.gmx/: MAE.project.gmx
MAE - GML/MAE.gmx/Configs/: Default.config.gmx
MAE - GML/MAE.gmx/background/: background1.background.gmx  tex_Light.background.gmx  tex_box.background.gmx  tex_particle.background.gmx
MAE - GML/MAE.gmx/datafiles/: MA_DX9.iobj  MA_DX9.ipdb
MAE - GML/MAE.gmx/objects/: obj_Light.object.gmx  obj_MD2Animation.object.gmx  obj_MPM.object.gmx  obj_Navigation.object.gmx  obj_Particle.object.gmx  obj_Physics.object.gmx  obj_Shader.object.gmx  obj_VecMatQuat.object.gmx  obj_XStatic.object.gmx  obj_debug.object.gmx
MAE - GML/MAE.gmx/rooms/: rm_Light.room.gmx  rm_MPM.room.gmx  rm_Navigation.room.gmx  rm_Physics.room.gmx  rm_Shader.room.gmx  rm_VecMatQuat.room.gmx  rm_XStatic.room.gmx  rm_debug.room.gmx  rm_particle.room.gmx
MAE - GML/MAE.gmx/scripts/: MAE_AnimationAdd.gml  MAE_AnimationControllerCreate.gml  MAE_AnimationControllerSet.gml  MAE_AnimationControllerUpdate.gml  MAE_AnimationCreate.gml  MAE_AnimationGetFrame.gml  MAE_AnimationGetFrame1.gml  MAE_AnimationGetFrame2.gml  MAE_AnimationGetTime.gml  MAE_AnimationSet.gml  MAE_AnimationSetAdd.gml  MAE_AnimationUpdate.gml  MAE_BufferPoke.gml  MAE_BufferRemove.gml  MAE_BufferReserve.gml  MAE_BufferSize.gml  MAE_BufferTell.gml  MAE_BufferWriteValue.gml  MAE_Clear.gml  MAE_ErrorEmpty.gml  MAE_ErrorGetString.gml  MAE_ErrorPop.gml  MAE_ErrorSetFlags.gml  MAE_Flush.gml  MAE_Free.gml  MAE_FreePointer.gml  MAE_GMTexCreateFromTexture.gml  MAE_HookDisable.gml  MAE_HookEnable.gml  MAE_HookSetPropertyInt.gml  MAE_HookSetPropertyNull.gml  MAE_HookSetPropertyPointer.gml  MAE_HookStackClear.gml  MAE_HookStackEmpty.gml  MAE_HookStackPopPointer.gml  MAE_HooksApply.gml  MAE_HooksCreate.gml  MAE_HooksDestroy.gml  MAE_HooksMakeCurrent.gml  MAE_HooksRemove.gml  (+277 more)
MAE - GML/MAE.gmx/shaders/: shdLight.shader
MAE/GMLAPI/: Bullet.props  BulletConstraint.cpp  BulletDebug.props  Fmod.cpp  ForwardPipeline.cpp  GMLAPI.vcxproj  GMLAPI.vcxproj.filters  Main.cpp  Main.h  Model.cpp  Navigation.cpp  Particle.cpp  Shader.cpp  Stream.cpp  TextureDirectory.cpp  Utils.h  vc-fileutils.settings
MAE/MAE/: CFmodChannel.cpp  CFmodDSP.cpp  CFmodSound.cpp  MAE.vcxproj  MAE.vcxproj.filters  Main.cpp  Main.h  vc-fileutils.settings
MAE/MAE/Bullet/: Bullet.h  BulletDebugDraw.cpp  BulletDebugDraw.h
MAE/MAE/Core/: Deletable.h  DynamicArray.h  Exception.h  Mat.h  Math.h  Types.h  Utils.h  Vec.h
MAE/MAE/FMOD/: CFmod.cpp  CFmod.h  CFmodChannel.cpp  CFmodHelper.h  CFmodSound.cpp
MAE/MAE/Navigation/: NavMeshDebugDraw.h  Navigation.cpp
MAE/MAE/Rendering/: Mesh.h  ModelMD2.cpp  ModelMD2.h  ModelMPM.cpp  ModelMPM.h  ModelX.cpp  ModelX.h  Particle.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleModifier.cpp  ParticleModifier.h  ParticleSystem.cpp  ParticleSystem.h  Renderer.cpp  Renderer.h  RendererImpl.h  TextureCollection.h  VertexData.cpp
MAE/RecastNavigation/: RecastNavigation.vcxproj  RecastNavigation.vcxproj.filters
MAE/src/GMLAPI/: Buffer.cpp  BulletBody.cpp  BulletConstraint.cpp  BulletMisc.cpp  BulletShape.cpp  BulletWorld.cpp  Error.cpp  Fmod.cpp  IndexBuffer.cpp  Light.cpp  Main.cpp  Main.h  Material.cpp  Misc.cpp  Model.cpp  Navigation.cpp  Particle.cpp  Shader.cpp  Stream.cpp  Stream.h  Surface.cpp  Texture.cpp  VertexBuffer.cpp  VertexData.cpp  (+2 more)
Specifications/: MPM.h  README.md
Tools/ExtGen/: .gitignore
Tools/Importer/: .gitignore  Importer.sln
Tools/UtilHeaders/: Color.h  Mat.h  Quat.h  Vec.h
build ()/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Audition.h  Bullet.vcxproj  Bullet.vcxproj.filters  GMLAPI.vcxproj  GMLAPI.vcxproj.filters  MAE.vcxproj  MAE.vcxproj.filters  RIFF.h  Recast.vcxproj  Recast.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
build ()/bullet3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BulletConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
(+676 files in other folders)
